# parking-app

./: .gitignore  pyproject.toml  requirements.txt
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_is_handicap.py
accounts/templates/accounts/: base.html  change_password.html  login.html  register.html
config/: asgi.py  celery.py  settings.py  urls.py
parking/: admin.py  apps.py  consumers.py  models.py  routing.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
parking/migrations/: 0001_initial.py  0002_parkinglot_maps_link_alter_booking_vehicle_number.py
parking/templates/parking/: base.html  booking_detail.html  booking_failure.html  booking_success.html  booking_summary.html  creating_booking.html  home.html  location_list.html  parking_lots.html  user_bookings.html
