[project]
name = "parking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "channels-redis>=4.2.1",
    "channels[daphne]>=4.2.2",
    "django-environ>=0.12.0",
    "django>=5.2.1",
    "psycopg>=3.2.9",
    "django-celery-beat>=2.8.1",
    "stripe>=12.1.0",
    "whitenoise>=6.9.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "celery[redis]>=5.5.2",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pytest-asyncio>=0.26.0",
]
[project.scripts] 
